--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/turf": "^7.1.0",
+    "axios": "^1.7.9",
+    "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
+    "leaflet": "^1.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^3.2.5",
+    "react-router-dom": "^7.0.2",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
